Implementado estilos nas paginas e edição de chamdo

--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Cadastrar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Cadastrar.cshtml
@@ -6,7 +6,10 @@
     ViewBag.Titulo = "Cadastro de Chamado de Manutenção";
 }
 
-<a class="visualizar" href="/chamados/visualizar">Visualizar Chamados</a>
+<div class="visualizar-cadastrar">
+    <a  href="/chamados/visualizar">Visualizar Chamados</a>
+</div>
+
 
 <form class="forms" action="/chamados/cadastrar" method="post">
 
