--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Cadastrar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Cadastrar.cshtml
@@ -7,7 +7,10 @@
     ViewBag.Titulo = "Cadastro de Equipamentos";
 }
 
-<a class="visualizar" href="/equipamentos/visualizar">Visualizar Equipamento</a>
+<div class="visualizar-cadastrar">
+    <a href="/equipamentos/visualizar">Visualizar Equipamento</a>
+</div>
+
 
 <form class="forms" action="/equipamentos/cadastrar" method="post">
 
