--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Cadastrar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Cadastrar.cshtml
@@ -7,8 +7,9 @@
     ViewBag.Titulo = "Cadastro de Fabricante";
 }
 
-
-<a class="visualizar" href="/equipamentos/visualizar">Visualizar Equipamentos</a>
+<div class="visualizar-cadastrar">
+    <a href="/equipamentos/visualizar">Visualizar Equipamentos</a>
+</div>
 
 <form class="forms" action="/fabricantes/cadastrar" method="post">
     <label>Nome do Fabricante:</label>
