Implementação de estilização de paginas Excluir

--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Visualizar.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Titulo = "Visualização de Chamados";
 }
 
-<div class="botao-cadastrar">
+<div class="visualizar-cadastrar">
     <a href="/chamados/cadastrar">Cadastrar Novo Chamado</a>
 </div>
 
