--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
@@ -7,7 +7,7 @@
     ViewBag.Titulo = "Visualização de Equipamentos";
 }
 
-<div class="botao-cadastrar">
+<div class="visualizar-cadastrar">
     <a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a>
 </div>
 
