--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
@@ -8,7 +8,7 @@
     ViewBag.Titulo = "Visualização de Fabricantes";
 }
 
-<div class="botao-cadastrar">
+<div class="visualizar-cadastrar">
     <a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a>
 </div>
 
