--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Excluir.cshtml
@@ -6,15 +6,15 @@
     ViewBag.Titulo = "Finalizar Chamados Concluídos";
 }
 
-<button><a href="/chamados/cadastrar">Cadastrar Novo Chamado</a></button>
-<button><a href="/chamados/visualizar">Visualizar Chamados</a></button>
-
+<div class="visualizar-cadastrar">
+    <a href="/chamados/cadastrar">Cadastrar Novo Chamado</a>
+    <a href="/chamados/visualizar">Visualizar Chamados</a>
+</div>
 <hr>
-
 <p>Você confirma que o chamado "@Model.Titulo" foi conluído e pode ser Finalizado/Excluido?</p>
 
 <form action="/chamados/excluir/@Model.Id" method="post">
-    <button type="submit">Confirmar</button>
-    <button> <a href="/chamados/visualizar">Voltar</a></button>
-   
+    <button class="botao-submit" style="background-color: var(--cor-excluir);" type="submit">Confirmar</button>
+    <a href="/chamados/visualizar">Voltar</a>
 </form>
+<hr>
