--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Excluir.cshtml
@@ -8,14 +8,15 @@
     ViewBag.Titulo = "Exclusão de Equipamentos";
 }
 
-<button><a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a></button>
-<button><a href="/equipamentos/visualizar">Visualizar Equipamento</a></button>
-
+<div class="visualizar-cadastrar">
+    <a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a>
+    <a href="/equipamentos/visualizar">Visualizar Equipamento</a>
+</div>
 <hr>
-
 <p>Você tem certeza que deseja excluir o registro "@Model.Nome"?</p>
-
 <form action="/equipamentos/excluir/@Model.Id" method="post">
-    <button type="submit">Confirmar</button>
-    <button><a href="/equipamentos/visualizar">Voltar</a></button>   
+    <hr>
+    <button class="botao-submit" style="background-color: var(--cor-excluir);" type="submit">Confirmar</button>
+    <a href="/equipamentos/visualizar">Voltar</a>
 </form>
+<hr>
