Implementada marcação de pagina ativa

--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Excluir.cshtml
@@ -10,7 +10,7 @@
     <a href="/chamados/cadastrar">Cadastrar Novo Chamado</a>
     <a href="/chamados/visualizar">Visualizar Chamados</a>
 </div>
-<hr>
+<h3>Finalizar Chamado</h3>
 <p>Você confirma que o chamado "@Model.Titulo" foi conluído e pode ser Finalizado/Excluido?</p>
 
 <form action="/chamados/excluir/@Model.Id" method="post">
