--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Excluir.cshtml
@@ -12,7 +12,7 @@
     <a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a>
     <a href="/equipamentos/visualizar">Visualizar Equipamento</a>
 </div>
-<hr>
+<h3>Exclusão de Equipamento</h3>
 <p>Você tem certeza que deseja excluir o registro "@Model.Nome"?</p>
 <form action="/equipamentos/excluir/@Model.Id" method="post">
     <hr>
