--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
@@ -20,9 +20,10 @@
             <li>
                 <div>
                     <p><strong>Fabricante: </strong>@f.Nome</p>
-                    <p>Contato</p>
-                    <p>Email: @f.Email</p>
-                    <p>Telefone: @f.Telefone</p>
+                    <hr>
+                    <p><strong>Contato</strong></p>
+                    <p><strong>Email:</strong> @f.Email</p>
+                    <p><strong>Telefone:</strong> @f.Telefone</p>
 
                     <a href="/fabricantes/editar/@f.Id">Editar</a>
                     <span><a href="/fabricantes/excluir/@f.Id">Excluir</a></span>
