Implementado Titulo de paginas

--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Cadastrar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Cadastrar.cshtml
@@ -6,6 +6,8 @@
     ViewBag.Titulo = "Cadastro de Chamado de Manutenção";
 }
 
+<h3>Cadastro de Chamado de Manutenção</h3>
+
 <div class="visualizar-cadastrar">
     <a  href="/chamados/visualizar">Visualizar Chamados</a>
 </div>
