--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Editar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Editar.cshtml
@@ -6,6 +6,8 @@
     ViewBag.Titulo = "Edição de Chamados";
 }
 
+<h3>Edição de Chamados</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/chamados/cadastrar">Cadastrar Novo Chamado</a>
     <a href="/chamados/visualizar">Visualizar Chamados</a>
