--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Visualizar.cshtml
@@ -6,6 +6,8 @@
     ViewBag.Titulo = "Visualização de Chamados";
 }
 
+<h3>Visualizando Chamados</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/chamados/cadastrar">Cadastrar Novo Chamado</a>
 </div>
