--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Excluir.cshtml
@@ -8,6 +8,8 @@
     ViewBag.Titulo = "Exclusão de Equipamentos";
 }
 
+<h3>Exclusão de Equipamentos</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a>
     <a href="/equipamentos/visualizar">Visualizar Equipamento</a>
