--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Visualizar.cshtml
@@ -7,6 +7,8 @@
     ViewBag.Titulo = "Visualização de Equipamentos";
 }
 
+<h3>Visualizando Equipamentos</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a>
 </div>
