--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Editar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Editar.cshtml
@@ -8,6 +8,8 @@
     ViewBag.Titulo = "Edição de Fabricante";
 }
 
+<h3>Edição de Fabricante</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a>
     <a href="/fabricantes/visualizar">Visualizar Fabricantes</a>
