--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Excluir.cshtml
@@ -8,6 +8,8 @@
     ViewBag.Titulo = "Exclusão de Fabricante";
 }
 
+<h3>Exclusão de Fabricante</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a>
     <a href="/fabricantes/visualizar">Visualizar Fabricantes</a>
