--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Visualizar.cshtml
@@ -8,10 +8,11 @@
     ViewBag.Titulo = "Visualização de Fabricantes";
 }
 
+<h3>Visualizando fabricantes</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a>
 </div>
-
 
 <div>
     @foreach (DetalhesFabricanteViewModel f in Model.Registros)
