--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorChamado/Excluir.cshtml
@@ -6,11 +6,13 @@
     ViewBag.Titulo = "Finalizar Chamados Concluídos";
 }
 
+<h3>Finalizar/Excluir Chamados</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/chamados/cadastrar">Cadastrar Novo Chamado</a>
     <a href="/chamados/visualizar">Visualizar Chamados</a>
 </div>
-<h3>Finalizar Chamado</h3>
+
 <p>Você confirma que o chamado "@Model.Titulo" foi conluído e pode ser Finalizado/Excluido?</p>
 
 <form action="/chamados/excluir/@Model.Id" method="post">
