--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Cadastrar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Cadastrar.cshtml
@@ -7,6 +7,8 @@
     ViewBag.Titulo = "Cadastro de Equipamentos";
 }
 
+<h3>Cadastro de Equipamentos</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/equipamentos/visualizar">Visualizar Equipamento</a>
 </div>
