--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Editar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorEquipamento/Editar.cshtml
@@ -7,6 +7,8 @@
     ViewBag.Titulo = "Edição de Equipamentos";
 }
 
+<h3>Edição de Equipamentos</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/equipamentos/cadastrar">Cadastrar Novo Equipamento</a>
     <a href="/equipamentos/visualizar">Visualizar Equipamento</a>
