--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Cadastrar.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Cadastrar.cshtml
@@ -7,6 +7,8 @@
     ViewBag.Titulo = "Cadastro de Fabricante";
 }
 
+<h3>Cadastro de Fabricante</h3>
+
 <div class="visualizar-cadastrar">
     <a href="/equipamentos/visualizar">Visualizar Equipamentos</a>
 </div>
