--- a/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Excluir.cshtml
+++ b/GestaoDeEquipamentos.ConsoleApp/Views/ControladorFabricante/Excluir.cshtml
@@ -14,8 +14,8 @@
     <a href="/fabricantes/cadastrar">Cadastrar Novo Fabricante</a>
     <a href="/fabricantes/visualizar">Visualizar Fabricantes</a>
 </div>
-<h3>Exclusão de Fabricante</h3>
-<p>Você tem certeza que deseja excluir o registro "@Model.Nome"?</p>
+
+<p class="p-excluir">Você tem certeza que deseja excluir o registro "@Model.Nome"?</p>
 
 <form action="/fabricantes/excluir/@Model.Id" method="post">
     <hr />
